--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Who am I</h1>
     <p>I'm morimolymoly a.k.a. ねねっち!</p>
     <p>B4@たま幼稚園工科大学</p>
-    <p>💗infosec, system software, Music(BASE MUSIC & ANIME SONGS)💗</p>
+    <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
     <p>😺I'm currently digging hypervisor stuff😺</p>
     <h1>Contacts</h1>
     <p>XMPP:moly420👌exploit.im</p>
