--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>XMPP:moly420👌exploit.im</p>
     <p>Email:morimolymoly👌gmail.com</p>
     <h1>Donate</h1>
-    <p><a href="bitcoin:37qS7VkYDhrcLE4xC5LHyrXH9ZvrBPR6Td">Bitcoin(P2SH)</a></p>
+    <p><a href="bitcoin:37qS7VkYDhrcLE4xC5LHyrXH9ZvrBPR6Td">Bitcoin</a></p>
     <p>
     <h1>Links</h1>
     <p><a href="https://twitter.com/morimolymoly">Twitter</a></p>
