add: teaminfo and img

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <div class="glitchmoly" data-text="morimolymoly">morimolymoly</div>
+    <img class="gekikawa" src="./imgs/gekikawa.png" /><br>
     <h1>Who am I</h1>
-    <p>I'm morimolymoly a.k.a. ねねっち!</p>
-    <p>B4@たま幼稚園工科大学</p>
+    <p>I'm morimolymoly a.k.a. ゲキカワねこみみメイド，HealthyBoy</p>
+    <p>B4@The University of Electro-Communications</p>
     <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
     <p>😺I'm currently digging hypervisor stuff😺</p>
     <h1>Contacts</h1>
     <p>XMPP:moly420👌exploit.im</p>
     <p>Email:morimolymoly👌gmail.com</p>
     <h1>Donate</h1>
-    <p><a href="bitcoin:37qS7VkYDhrcLE4xC5LHyrXH9ZvrBPR6Td">Bitcoin</a></p>
+    <p>bitcoin:37qS7VkYDhrcLE4xC5LHyrXH9ZvrBPR6Td</p>
     <p>
     <h1>Links</h1>
     <p><a href="https://twitter.com/morimolymoly">Twitter</a></p>
@@ -26,5 +27,21 @@
     <p><a href="https://github.com/morimolymoly/">GitHub</a></p>
     <p><a href="https://qiita.com/morimolymoly">Qiita</a></p>
     <p><a href="https://morimolymoly.github.io/nikki/">日記</a></p>
+    <h1>Teams</h1>
+    <div class="team">
+        <p><img class="trapmafia_img"" src="./imgs/trapmafia.png" /></p>
+        <h2>Tr4pMafia</h2>
+        <p>Private Team: Hypervisor Stuff</p>
+        <h3>Works</h3>
+        <p>DXM(WIP) - ultra thin baremetal hypervisor written in Rust</p>
+        <p>syscall -  trap syscall(Bareflank extention)</p>
+    </div>
+    <div class="team">
+        <img class="hypervillage_img" src="./imgs/hypervillage.png" /><br>
+        <h2>HyperVillage</h2>
+        <p>Slack Workspace for Virtualization Technology hackers and InfoSec people!</p>
+        <p>Free to Join Us!</p>
+        <p><a href="https://t.co/nW5iHEk35L">Slack invitation link</a></p>
+    </div>
 </body>
 </html>
