--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>morimolymoly.com</title>
 </head>
 <body>
-    <div class="glitchmoly" data-text="morimolymoly">morimolymoly</div>
-    <img class="gekikawa" src="./imgs/gekikawa.png" /><br>
+    <p><div class="glitchmoly" data-text="morimolymoly">morimolymoly</div></p>
+    <p><img class="gekikawa" src="./imgs/gekikawa.png" /></p>
     <h1>Who am I</h1>
     <p>I'm morimolymoly a.k.a. ゲキカワねこみみメイド，HealthyBoy</p>
     <p>B4@The University of Electro-Communications</p>
