replace gekikawa.png and fix some shitty layout

--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
 </head>
 <body>
     <div class="header">
-        <p><div class="glitchmoly" data-text="morimolymoly">morimolymoly</div></p>
-        <p><img class="gekikawa" src="./imgs/gekikawa.png" /></p>
+        <div class="glitchmoly">morimolymoly</div>
+        <img class="gekikawa" src="./imgs/gekikawa.png" />
     </div>
     <div class="box">
-        <h1>Who am I</h1>
+        <div class="box-header">
+            <h1>Who am I</h1>
+        </div>
         <p>I'm morimolymoly a.k.a. ゲキカワねこみみメイド，HealthyBoy</p>
         <p>B4@The University of Electro-Communications</p>
         <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
         <p>😺I'm currently digging hypervisor stuff😺</p>
     </div>
     <div class="box">
-        <h1>Contacts</h1>
+        <div class="box-header">
+            <h1>Contacts</h1>
+        </div>
         <p>XMPP:moly420👌exploit.im</p>
         <p>Email:morimolymoly👌gmail.com</p>
     </div>
     <div class="box">
-        <h1>Donate</h1>
+        <div class="box-header">
+            <h1>Donate</h1>
+        </div>
         <p>bitcoin:37qS7VkYDhrcLE4xC5LHyrXH9ZvrBPR6Td</p>
     </div>
     <div class="box">
-        <h1>Links</h1>
+        <div class="box-header">
+            <h1>Links</h1>
+        </div>
         <p><a href="https://twitter.com/morimolymoly">Twitter</a></p>
         <p><a href="http://morimolymoly.hateblo.jp/">Blog</a></p>
         <p><a href="https://github.com/morimolymoly/">GitHub</a></p>
@@ -37,7 +45,9 @@
         <p><a href="https://morimolymoly.github.io/nikki/">日記</a></p>
     </div>
     <div class="box">
-    <h1>Teams</h1>
+        <div class="box-header">
+            <h1>Teams</h1>
+        </div>
         <p><img class="trapmafia_img"" src="./imgs/trapmafia.png" /></p>
         <h2>Tr4pMafia</h2>
         <p>Private Team: Hypervisor Stuff</p>
