--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p><a href="https://github.com/morimolymoly/">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly">Qiita</a></p>
         <p><a href="https://morimolymoly.github.io/nikki/">日記</a></p>
+        <p><a href="https://note.mu/morimolymoly">note</a></p>
     </div>
     <div class="box">
         <div class="box-header">
