caution for my email address

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h1>Contacts</h1>
         </div>
         <p>XMPP:moly420👌exploit.im</p>
+        <p>Now, I don't use email address below, because of idiots who use my address for phishing.</p>
         <p>Email:morimolymoly👌gmail.com</p>
     </div>
     <div class="box">
