--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <p><a href="https://qiita.com/morimolymoly">Qiita</a></p>
         <p><a href="https://morimolymoly.github.io/nikki/">日記</a></p>
         <p><a href="https://note.mu/morimolymoly">note</a></p>
+        <p><a href="https://morimolymoly.github.io/leetcode-blog/">LeetCodeBlog</a></p>
+        <p><a href="https://morimolymoly.github.io/article_bay/">ArticleBay</a></p>
     </div>
     <div class="box">
         <div class="box-header">
