remove links and add SNN

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>I'm morimolymoly a.k.a. ゲキカワねこみみメイド，HealthyBoy</p>
         <p>B4@The University of Electro-Communications</p>
         <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
-        <p>😺I'm currently digging hypervisor stuff😺</p>
+        <p>😺I'm currently digging hypervisor,SNN(Spiking Neural Network)😺</p>
     </div>
     <div class="box">
         <div class="box-header">
@@ -49,8 +49,6 @@
         <p><a href="http://morimolymoly.hateblo.jp/">Blog</a></p>
         <p><a href="https://github.com/morimolymoly/">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly">Qiita</a></p>
-        <p><a href="https://morimolymoly.github.io/nikki/">日記</a></p>
-        <p><a href="https://note.mu/morimolymoly">note</a></p>
         <p><a href="https://morimolymoly.github.io/leetcode-blog/">LeetCodeBlog</a></p>
         <p><a href="https://morimolymoly.github.io/article_bay/">ArticleBay</a></p>
     </div>
@@ -58,7 +56,7 @@
         <div class="box-header">
             <h1>Teams</h1>
         </div>
-        <p><img class="trapmafia_img"" src="./imgs/trapmafia.png" /></p>
+        <p><img class="trapmafia_img" src="./imgs/trapmafia.png" /></p>
         <h2>Tr4pMafia</h2>
         <p>Private Team: Hypervisor Stuff</p>
         <h3>Works</h3>
