--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="box-header">
             <h1>Who am I</h1>
         </div>
-        <p>I'm morimolymoly a.k.a. ゲキカワねこみみメイド，HealthyBoy</p>
+        <p>I'm morimolymoly a.k.a ゲキカワねこみみメイド，HealthyBoy</p>
         <p>B4@The University of Electro-Communications</p>
         <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
         <p>😺I'm currently digging hypervisor,SNN(Spiking Neural Network)😺</p>
