--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <div class="box-header">
             <h1>Who am I</h1>
         </div>
-        <p>I'm morimolymoly</p>
+        <p>I'm Mizuho "morimolymoly" MORI.</p>
+        <p>morimolymoly, mmmly, もりもりもり〜</p>
         <p>M2@The University of Electro-Communications</p>
-        <p>💗infosec, system software, Music(BASS MUSIC & ANIME SONGS)💗</p>
-        <p>😺I'm currently digging hypervisor😺</p>
+        <p>💗InfoSec, System Software💗</p>
+    </div>
+    <div class="box">
+        <div class="box-header">
+            <h1>Activities</h1>
+        </div>
+        <p>IPA Security Camp 2017</p>
+        <p><a href="https://www.meti.go.jp/english/press/2020/0528_002.html">Super Creator, IPA MITOU(未踏) 2019</a></p>
     </div>
     <div class="box">
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
-        <p>XMPP:moly420👌exploit.im</p>
         <p><a href="https://twitter.com/morimolymoly">Twitter</a></p>
         <p>Email:morimolymoly👌gmail.com</p>
-    </div>
-    <div class="box">
-        <div class="box-header">
-            <h1>Donate</h1>
-        </div>
-        <p>NULL</p>
     </div>
     <div class="box">
         <div class="box-header">
@@ -43,24 +43,6 @@
         <p><a href="https://github.com/morimolymoly/">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly">Qiita</a></p>
         <p><a href="https://morimolymoly.github.io/lets-get-arrested/">Let's get arrested(無限ポップアップ)</a></p>
-    </div>
-    <div class="box">
-        <div class="box-header">
-            <h1>Teams</h1>
-        </div>
-        <p><img class="trapmafia_img" src="./imgs/trapmafia.png" /></p>
-        <h2>Tr4pMafia</h2>
-        <p>Private Team: Hypervisor Stuff</p>
-        <h3>Works</h3>
-        <p>DXM(WIP) - ultra thin baremetal hypervisor written in Rust</p>
-        <p>syscall -  trap syscall(Bareflank extention)</p>
-    </div>
-    <div class="box">
-        <img class="hypervillage_img" src="./imgs/hypervillage.png" /><br>
-        <h2>HyperVillage</h2>
-        <p>Slack Workspace for Virtualization Technology hackers and InfoSec people!</p>
-        <p>Free to Join Us!</p>
-        <p><a href="https://t.co/nW5iHEk35L">Slack invitation link</a></p>
     </div>
 </body>
 </html>
