fix padding; delete unused items; rename css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="fuck.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Bowlby+One|Bree+Serif" rel="stylesheet">
     <title>morimolymoly</title>
 </head>
@@ -33,6 +33,8 @@
         </div>
         <p><a href="https://twitter.com/morimolymoly" target="_blank">Twitter</a></p>
         <p>Email:morimolymoly👌gmail.com</p>
+        <p>Wire: @morimolymoly</p>
+        <p>Discord: morimolymoly#7150</p>
     </div>
     <div class="box">
         <div class="box-header">
