i cant read eng

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <p>I'm Mizuho "morimolymoly" MORI.</p>
         <p>a.k.a. morimolymoly, mmmly</p>
-        <p>M2@The University of Electro-Communications</p>
         <p>💗InfoSec, System Software💗</p>
+        <p>アイ・キャント・リード・イングリッシュ</p>
     </div>
     <div class="box">
         <div class="box-header">
