--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="box-header">
             <h1>Who am I</h1>
         </div>
-        <p>I'm Mizuho "morimolymoly" MORI.</p>
+        <p>I'm Mizuho MORI.</p>
         <p>a.k.a. morimolymoly, mmmly</p>
         <p>💗InfoSec, System Software💗</p>
     </div>
