add: oss contribution WSL2-Linux-Kernel

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <h1>OSS Contributions</h1>
         </div>
         <p><a href="https://github.com/torvalds/linux/search?q=morimolymoly&type=commits" target="_blank">Linux</a></p>
+        <p><a href="https://github.com/microsoft/WSL2-Linux-Kernel/search?q=morimolymoly&type=commits" target="_blank">WSL2-Linux-Kernel</a></p>
     </div>
     </body>
 </html>
