--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Links</h1>
         </div>
         <p><a href="https://twitter.com/morimolymoly" target="_blank">Twitter</a></p>
-        <p><a href="http://morimolymoly.hateblo.jp/" target="_blank">Blog</a></p>
+        <p><a href="https://morimolymoly.hateblo.jp/" target="_blank">Blog</a></p>
         <p><a href="https://github.com/morimolymoly/" target="_blank">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
         <p><a href="https://morimolymoly.github.io/lets-get-arrested/" target="_blank">Let's get arrested(無限ポップアップ)</a></p>
