--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
+        <p><a href="https://t.me/morimolymoly">Telegram</a></p>
         <p>Email:morimolymoly👌gmail.com</p>
     </div>
     <div class="box">
