--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>a.k.a. morimolymoly, mmmly</p>
         <p>💗InfoSec, System Software💗</p>
         <p>I'M A BOSS OF <a href="https://dcdcnation.com/" target="_blank">DCDC</a> and <a
-                href="https://intel.dcdcnation.com/" target="_blank">DC2INTEL</p>
+                href="https://intel.dcdcnation.com/" target="_blank">DC2INTEL</a></p>
     </div>
     <div class="box">
         <div class="box-header">
