--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <h1>Contacts</h1>
         </div>
         <p>Email:morimolymoly👌gmail.com</p>
+				<p>Telegram: @morimolymoly</p>
     </div>
     <div class="box">
         <div class="box-header">
