--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <p>IPA Security Camp 2017</p>
         <p><a href="https://www.meti.go.jp/english/press/2020/0528_002.html" target="_blank">Super Creator, IPA
                 MITOU(未踏) 2019</a></p>
-        <p><a href="https://www.avtokyo.org/avtokyo2022/day2-speakers" target="_blank">AVTOKYO2022 Speaker(Undetectable
-                Threats: Spreading Node.js based Malware with Phishing)</a></p>
+        <p><a href="https://www.avtokyo.org/avtokyo2022/day2-speakers" target="_blank">AVTOKYO2022 Speaker</a></p>
     </div>
     <div class="box">
         <div class="box-header">
@@ -44,7 +43,7 @@
         <div class="box-header">
             <h1>Links</h1>
         </div>
-        <p><a href="https://twitter.com/morimolymoly" target="_blank">Twitter</a></p>
+        <p><a href="https://twitter.com/morimolymoly2" target="_blank">Twitter</a></p>
         <p><a href="https://morimolymoly.hateblo.jp/" target="_blank">Blog</a></p>
         <p><a href="https://github.com/morimolymoly/" target="_blank">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
