--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             <h1>Contacts</h1>
         </div>
         <p>Email:morimolymoly👌gmail.com</p>
-				<p>Telegram: @morimolymoly</p>
+        <p>Telegram: @morimolymoly</p>
     </div>
     <div class="box">
         <div class="box-header">
             <h1>Links</h1>
         </div>
-        <p><a href="https://twitter.com/morimolymoly2" target="_blank">Twitter</a></p>
         <p><a href="https://morimolymoly.hateblo.jp/" target="_blank">Blog</a></p>
         <p><a href="https://github.com/morimolymoly/" target="_blank">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
+        <p><a href="https://speakerdeck.com/morimolymoly">Speaker Deck</a></p>
         <p><a href="https://morimolymoly.github.io/lets-get-arrested/" target="_blank">Let's get arrested(無限ポップアップ)</a>
         </p>
     </div>
