--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <h1>Contacts</h1>
         </div>
         <p>Email:morimolymoly👌gmail.com</p>
-        <p>Telegram: @morimolymoly</p>
+        <p>I don't have Twitter or some other Fediverse account right now!</p>
+        <p>Contact me on Email plz.</p>
     </div>
     <div class="box">
         <div class="box-header">
