--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <p>I'm Mizuho MORI.</p>
         <p>a.k.a. morimolymoly, mmmly</p>
-        <p>💗InfoSec, System Software💗</p>
+        <p>Cyber Threat Intelligence Analyst</p>
         <p>I'M A BOSS OF <a href="https://dcdcnation.com/" target="_blank">DCDC</a> and <a
                 href="https://intel.dcdcnation.com/" target="_blank">DC2INTEL</a></p>
     </div>
@@ -58,6 +58,7 @@
         <p><a href="https://github.com/torvalds/linux/search?q=morimolymoly&type=commits" target="_blank">Linux</a></p>
         <p><a href="https://github.com/microsoft/WSL2-Linux-Kernel/search?q=morimolymoly&type=commits"
                 target="_blank">WSL2-Linux-Kernel</a></p>
+        <p><a href="https://github.com/r-efi/r-efi-alloc">r-efi-alloc</a></p>
     </div>
     <div class="box">
         <div class="box-header">
