--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <h1>Contacts</h1>
         </div>
         <p>Email:morimolymoly👌gmail.com</p>
-        <p>I don't have Twitter or some other Fediverse account right now!</p>
-        <p>Contact me on Email plz.</p>
+        <p><a href="https://twitter.com/morimolymoly2">Twitter</a></p>
     </div>
     <div class="box">
         <div class="box-header">
