--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <p>I'm Mizuho MORI.</p>
         <p>a.k.a. morimolymoly, mmmly</p>
-        <p>Cyber Threat Intelligence Analyst</p>
+        <p>Security Analyst</p>
         <p>I'M A BOSS OF <a href="https://dcdcnation.com/" target="_blank">DCDC</a> and <a
                 href="https://intel.dcdcnation.com/" target="_blank">DC2INTEL</a></p>
     </div>
