have just end my career

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p><a href="https://www.meti.go.jp/english/press/2020/0528_002.html" target="_blank">Super Creator, IPA
                 MITOU(未踏) 2019</a></p>
         <p><a href="https://www.avtokyo.org/avtokyo2022/day2-speakers" target="_blank">AVTOKYO2022 Speaker</a></p>
+        <p><a href="https://www.iwsec.org/mws/2022/committee.html" target="_blank">MWS2022 Committee member</a></p>
     </div>
     <div class="box">
         <div class="box-header">
