fix github link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1>Links</h1>
         </div>
         <p><a href="https://morimolymoly.hateblo.jp/" target="_blank">Blog</a></p>
-        <p><a href="https://github.co/morimolymoly/" target="_blank">GitHub</a></p>
+        <p><a href="https://github.com/morimolymoly/" target="_blank">GitHub</a></p>
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
         <p><a href="https://medium.com/@morimolymoly" target="_blank">Medium</a></p>
         <p><a href="https://speakerdeck.com/morimolymoly">Speaker Deck</a></p>
