--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
         <p>Email:morimolymoly👌gmail.com</p>
         <p><a href="https://twitter.com/morimolymoly2">Twitter</a></p>
+        <p>Discord: clona</p>
+        <p>Telegram: morimolymoly</p>
     </div>
     <div class="box">
         <div class="box-header">
