--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <div class="box-header">
             <h1>Articles</h1>
         </div>
+        <p><a href="https://medium.com/@morimolymoly/recent-risepro-is-packed-with-enigma-and-shipped-from-cab-loader-2bbeed5d469a"
+            target="_blank">Recent RisePro is packed with ENIGMA and shipped from CAB loader(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/malcabinet-campaign-65cedbf52039"
             target="_blank">MalCabinet Campaign(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/how-to-research-malware-for-free-simda-case-749924545b92"
