--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <p>I'm Mizuho MORI.</p>
         <p>a.k.a. morimolymoly, mmmly</p>
-        <p>Malware Analyst</p>
+        <p>Software Engineer, Malware Analyst</p>
     </div>
     <div class="box">
         <div class="box-header">
