--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
-        <p><a href="https://twitter.com/morimolymoly2">Twitter</a></p>
+        <p>Matrix: @morimolymoly:matrix.org</p>
+        <p><a href="https://twitter.com/morimolymoly2">X(Twitter)</a></p>
         <p>Discord: clona</p>
-        <p>Telegram: morimolymoly</p>
     </div>
     <div class="box">
         <div class="box-header">
