--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
+        <p>Email: m3mori@proton.me</p>
         <p>Matrix: @morimolymoly:matrix.org</p>
         <p><a href="https://twitter.com/morimolymoly2">X(Twitter)</a></p>
         <p>Discord: clona</p>
