--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="box-header">
             <h1>Who am I</h1>
         </div>
-        <p>I'm Mizuho MORI.</p>
-        <p>a.k.a. morimolymoly, mmmly</p>
-        <p>Software Engineer, Malware Analyst</p>
+        <p>I'm Mizuho MORI, a.k.a. morimolymoly, mmmly, moly</p>
+        <p>I am a Security Researcher.</p>
+        <p>I am researching cyber threats including APT, cyber crime and focusing on endpoint threats.</p>
+        <p>Also, I am NTKernel things and Linux kernel developper.</p>
     </div>
     <div class="box">
         <div class="box-header">
