update: moved X into Links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <h1>Contacts</h1>
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
-        <p><a href="https://twitter.com/morimolymoly2">X(Twitter)</a></p>
         <p>Discord: clona</p>
     </div>
     <div class="box">
@@ -49,6 +48,7 @@
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
         <p><a href="https://medium.com/@morimolymoly" target="_blank">Medium</a></p>
         <p><a href="https://speakerdeck.com/morimolymoly">Speaker Deck</a></p>
+        <p><a href="https://twitter.com/morimolymoly2">X(I don't check DMs)</a></p>
         </p>
     </div>
     <div class="box">
