--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1>Who am I</h1>
         </div>
         <p>I'm Mizuho MORI, a.k.a. morimolymoly, mmmly, moly</p>
-        <p>I am a Security Researcher.</p>
+        <p>I am a Cyber Security Researcher.</p>
         <p>I am researching cyber threats including APT, cyber crime and focusing on endpoint threats.</p>
-        <p>Also, I am NTKernel things and Linux kernel developper.</p>
+        <p>Also, I am a NTKernel things and Linux kernel developper.</p>
     </div>
     <div class="box">
         <div class="box-header">
