--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
         <p>Discord: clona</p>
+        <p><a href="https://twitter.com/morimolymoly2">X</a></p>
     </div>
     <div class="box">
         <div class="box-header">
@@ -47,7 +48,6 @@
         <p><a href="https://qiita.com/morimolymoly" target="_blank">Qiita</a></p>
         <p><a href="https://medium.com/@morimolymoly" target="_blank">Medium</a></p>
         <p><a href="https://speakerdeck.com/morimolymoly">Speaker Deck</a></p>
-        <p><a href="https://twitter.com/morimolymoly2">X(I don't check DMs)</a></p>
         </p>
     </div>
     <div class="box">
