--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
         <p>Discord: clona</p>
-        <p><a href="https://twitter.com/morimolymoly2">X</a></p>
+        <p><a href="https://x.com/morimolymoly2">X</a></p>
     </div>
     <div class="box">
         <div class="box-header">
