--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Contacts</h1>
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
-        <p><a href="https://x.com/morimolymoly2">X</a></p>
+        <p>Currently, I don't have a Twitter(X) account!</p>
     </div>
     <div class="box">
         <div class="box-header">
