--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h1>Contacts</h1>
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
+        <p>Discord: moly444</p>
         <p>Currently, I don't have a Twitter(X) account!</p>
     </div>
     <div class="box">
