--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
-        <p>Matrix: @morimolymoly:matrix.org</p>
-        <p>Discord: moly444</p>
+        <p>Matrix: @morimolymoly:matrix.org</p>>
+        <p>Telegram: @morimolymoly</p>
         <p>Currently, I don't have a Twitter(X) account!</p>
     </div>
     <div class="box">
