--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="box-header">
             <h1>Contacts</h1>
         </div>
-        <p>Matrix: @morimolymoly:matrix.org</p>>
+        <p>Matrix: @morimolymoly:matrix.org</p>
         <p>Telegram: @morimolymoly</p>
         <p>Currently, I don't have a Twitter(X) account!</p>
     </div>
