--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <h1>Contacts</h1>
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
-        <p>Telegram: @morimolymoly</p>
-        <p>Currently, I don't have a Twitter(X) account!</p>
+        <p><a href="https://x.com/morimolymoly2" target="_blank">X</p>
+        <p>If you are interested in me, please feel free to reach me out!</p>
     </div>
     <div class="box">
         <div class="box-header">
