--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Contacts</h1>
         </div>
         <p>Matrix: @morimolymoly:matrix.org</p>
-        <p><a href="https://x.com/morimolymoly2" target="_blank">X</p>
+        <p><a href="https://x.com/morimolymoly2" target="_blank">X</a></p>
         <p>If you are interested in me, please feel free to reach me out!</p>
     </div>
     <div class="box">
