--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="box-header">
             <h1>Articles</h1>
         </div>
+        <p><a href="https://medium.com/@morimolymoly/is-peb-based-masquerading-effective-for-defenders-ef4c529d1375" target="_blank">Is PEB based Masquerading effective for defenders?(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/hunting-open-directories-and-malware-with-shodan-af23a62e37d7" target="_blank">Hunting Open Directories and malware with Shodan(Medium)</a></p>
         <p><a href="https://any.run/cybersecurity-blog/dcrat-analysis-in-any-run/" target="_blank">DCRat: Step-by-Step Analysis in ANY.RUN(ANY.RUN's Cybersecurity Blog)</a></p>
         <p><a href="https://infosecwriteups.com/understanding-python-disassembly-with-chatgpt-216e04c2e1ff" target="_blank">Understanding Python disassembly with ChatGPT(InfoSec Write-ups)</a></p>
