--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="box-header">
             <h1>Articles</h1>
         </div>
+        <p><a href="https://medium.com/@morimolymoly/how-roboski-packer-works-and-examples-of-abuse-case-141bfcbd4c03" target="_blank">How RoboSki Packer works and examples of abuse case(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/how-do-i-find-dprk-infrastructure-with-censys-00e481be540c" target="_blank">How Do I Find DPRK Infrastructure with Censys(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/is-peb-based-masquerading-effective-for-defenders-ef4c529d1375" target="_blank">Is PEB based Masquerading effective for defenders?(Medium)</a></p>
         <p><a href="https://medium.com/@morimolymoly/hunting-open-directories-and-malware-with-shodan-af23a62e37d7" target="_blank">Hunting Open Directories and malware with Shodan(Medium)</a></p>
