--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>I'm morimolymoly a.k.a. mmmly, moly</p>
         <p>I am a Cyber Security Researcher.</p>
         <p>I am researching cyber threats, cyber attack methodologies and mitigations, NTKernel.</p>
+        <p>I am a founder & CEO of <a href="https://hunterteam.io/en-US">Hunter Team Labs, Inc</a></p>
     </div>
     <div class="box">
         <div class="box-header">
